@@ -76,16 +76,20 @@ and &emacs; info pages.</para>
   object suitable for &re-regexp-exec;.</simpara></listitem></varlistentry>
 
 <varlistentry id="re-regexp-exec"><term><code>(&re-regexp-exec;
-     &pattern-r; &string-r; &key-amp; :BOOLEAN (&start-k; 0) &end-k;
-     &re-eflags-opts;)</code></term>
+   &pattern-r; &string-r; &key-amp; :RETURN-TYPE :BOOLEAN
+   (&start-k; 0) &end-k; &re-eflags-opts;)</code></term>
  <listitem><simpara>Execute the &pattern-r;, which must be a compiled
    &reg-exp; returned by &re-regexp-compile;, against the appropriate
    portion of the &string-r;.</simpara>
-  <simpara>Returns &match-t; structures as multiple values (one for each
+  <simpara>Returns &match-t; structures as &mul-val; (one for each
    subexpression which successfully matched and one for the whole pattern),
    unless <constant>:BOOLEAN</constant> was non-&nil;, in which case
    return &t; as an indicator of success, but do not allocate anything.
-</simpara></listitem></varlistentry>
+  </simpara><simpara>If <constant>RETURN-TYPE</constant> is &list-t; (or
+   &vector-t;), the &match-t; structures are returned as a &list-t; (or
+   a &vector-t;) instead.  If there are more than &multiple-values-limit;
+   &match-t; structures to return, a &list-t; is returned instead of
+   &mul-val;.</simpara></listitem></varlistentry>
 
 <varlistentry id="re-regexp-split"><term><code>(&re-regexp-split;
      &pattern-r; &string-r; &key-amp; (&start-k; 0) &end-k;
